--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+PyMySQL==0.9.3
 pytz==2019.3
+redis==3.3.11
 requests==2.22.0
 six==1.13.0
 urllib3==1.25.7
