--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==8.0.0
+APScheduler==3.6.3
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -13,5 +14,6 @@ pytz==2019.3
 redis==3.3.11
 requests==2.22.0
 six==1.13.0
+tzlocal==2.0.0
 urllib3==1.25.7
 Werkzeug==0.16.0
